style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body {
    background-color: #222;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.wrapper {
    width: 400px;
    margin: 0 38%;
    position: relative;
    background-color: rgba(255, 255, 255, 0.4);
}
.btn {
    display: block;
    margin: 0 38%;
    margin-top: 3%;
    width: 400px;
    font-family: inherit;
}
.wrapper-child {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 94px;
    gap: 2px;
}
p {
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 2px;
    user-select: none;
    font-size: 2rem;
}
p:hover {
    filter: brightness(0.9);
}
p:active {
    scale: 0.97;
    color: rgb(220, 88, 88);
    font-weight: bold;
}
.add-p {
    scale: 0.97;
    color: rgb(220, 88, 88);
    font-weight: bold;
}
.yellow {
    grid-column: 4 / -1;
}
.content {
    text-align: right;
    color: black;
    background-color: white;
    grid-column: span 3;
    display: flex;
    align-items: center;
    justify-content: right;
    padding: 0 2px;
    height: 92px;
    margin-top: 2px;
    overflow: hidden;
    font-size: 26px;

}
.top-text {
    position: absolute;
    top: 2px;
    width: 297px;
    text-align: right;
    color: #333;
    font-size: 18px;
}
.operator {
    background-color: aquamarine;
}
.operatorr {
    background-color: rgb(220, 88, 88);
}
.operatorr:active {
    color: aquamarine;
}

@media only screen and (max-width: 570px) and (min-width:320px) {
    body {
        height: 100vh;
    }
    .wrapper {
        margin: 0;
        width: 98%;
        overflow: hidden;
        margin-left: 1%;
    }
    .wrapper-child {
        gap: 2px;
    }

    .btn {
        margin-top: 5%;
        margin-left: 1%;
        width: 98%;
    }

    .top-text, .add-to-top-text {
        right: 26%;
    }
}
@media only screen and (min-width:570px) and (max-width:769px) {
    body {
        height: 100vh;
    }
    .wrapper {
        margin-left: 15%;
        width: 70%;
        overflow: hidden;
    }
    .btn {
        width: 70%;
        margin-left: 15%;
    }
    .top-text, .add-to-top-text {
        right: 25%;
    }
}
@media only screen and (max-width:1100px) {
    body {
        height: 100vh;
    }
}

